.autodev/state/last_gold_output.txt
test_authed_cookie (test_authed_cookie.TestAuthedCookie.test_authed_cookie) ... ok
test_cleanup_project_machine (test_cleanup_project_machine.TestCleanupProjectMachine.test_cleanup_project_machine) ... ok
test_fly_proxy (test_fly_proxy.TestFlyProxy.test_fly_proxy) ... ok
test_local_db (test_local_db.TestLocalDb.test_local_db) ... ok
test_mint_google_id_token (test_mint_google_id_token.TestMintGoogleIdToken.test_mint_google_id_token) ... ok
test_mint_session (test_mint_session.TestMintSession.test_mint_session) ... ok
test_machine_assignments (test_pglite.TestPglite.test_machine_assignments) ... ok
test_migrations (test_pglite.TestPglite.test_migrations) ... ok
test_projects (test_pglite.TestPglite.test_projects) ... ok
test_users_sessions (test_pglite.TestPglite.test_users_sessions) ... ok
test_playwright (test_playwright.TestPlaywright.test_playwright) ... setup_playwright.sh: ready (/mnt/c/dropbox/academia/projects/2026-supertex/tex-center/.tools/playwright)
SyntaxError: /mnt/c/dropbox/academia/projects/2026-supertex/tex-center/tests_gold/playwright/fixtures/liveProjectBootstrap.ts: Identifier 'token' has already been declared. (230:12)

  228 |       // guardrail (`test_sidecar_machine_count.py`) then only sees
  229 |       // residual untagged legacy machines.
> 230 |       const token = process.env.FLY_API_TOKEN ?? "";
      |             ^
  231 |       const appName = process.env.SIDECAR_APP_NAME ?? "tex-center-sidecar";
  232 |       if (token !== "") {
  233 |         try {

   at globalSetup.ts:38

  36 |
  37 | import { startLocalDb, type LocalDb } from "../lib/src/localDb.js";
> 38 | import {
     | ^
  39 |   bootstrapLiveProject,
  40 |   exportProjectToEnv,
  41 | } from "./fixtures/liveProjectBootstrap.js";
    at Object.<anonymous> (/mnt/c/dropbox/academia/projects/2026-supertex/tex-center/tests_gold/playwright/globalSetup.ts:38:1)

FAIL
test_sidecar_cold_start_coalescer (test_sidecar_cold_start_coalescer.TestSidecarColdStartCoalescer.test_sidecar_cold_start_coalescer) ... ok
test_machine_count_under_threshold (test_sidecar_machine_count.TestSidecarMachineCount.test_machine_count_under_threshold) ... ok
test_supertex_cold_newpage_crash (test_supertex_cold_newpage_crash.TestSupertexColdNewpageCrash.test_supertex_cold_newpage_crash) ... ok
test_supertex_daemon_real (test_supertex_daemon_real.TestSupertexDaemonReal.test_supertex_daemon_real) ... ok
test_supertex_filewatcher_race (test_supertex_filewatcher_race.TestSupertexFilewatcherRace.test_supertex_filewatcher_race) ... ok
test_supertex_oversize_target (test_supertex_oversize_target.TestSupertexOversizeTarget.test_supertex_oversize_target) ... ok
test_supertex_warm_doc_body_edit_noop (test_supertex_warm_doc_body_edit_noop.TestSupertexWarmDocBodyEditNoop.test_supertex_warm_doc_body_edit_noop) ... ok
test_sweep_orphaned_sidecar_machines (test_sweep_orphaned_sidecar_machines.TestSweepOrphanedSidecarMachines.test_sweep_orphaned_sidecar_machines) ... ok

======================================================================
FAIL: test_playwright (test_playwright.TestPlaywright.test_playwright)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/mnt/c/dropbox/academia/projects/2026-supertex/tex-center/tests_gold/cases/test_playwright.py", line 192, in test_playwright
    raise AssertionError(
AssertionError: playwright failed (exit 1) — see ✓ / ✘ lines above for per-spec breakdown

----------------------------------------------------------------------
Ran 19 tests in 60.870s

FAILED (failures=1)
